src/snapshots/alma__infer__tests__infer_expr-10.snap
---
source: src/infer.rs
expression: "infer(\"if 1 == 1 then 1 else 2\")"

---
Input:

if 1 == 1 then 1 else 2

---
Output:

Float
