src/snapshots/alma__infer__tests__infer_expr-11.snap
---
source: src/infer.rs
expression: "infer(\"if 1 == 1 then if 1 + 1 > 2 then 5 else 1 / 1 else 2 + 2\")"

---
Input:

if 1 == 1 then if 1 + 1 > 2 then 5 else 1 / 1 else 2 + 2

---
Output:

Float
