src/snapshots/alma__infer__tests__infer_expr-19.snap
---
source: src/infer.rs
expression: "infer(r\"{ x = 1 }\")"

---
Input:

{ x = 1 }

---
Output:

{ x : Float }
