src/snapshots/alma__infer__tests__infer_expr-2.snap
---
source: src/infer.rs
expression: "infer(r\"\\f -> \\x -> f (f x)\")"

---
Input:

\f -> \x -> f (f x)

---
Output:

(a -> a) -> a -> a
