src/snapshots/alma__infer__tests__infer_expr-20.snap
---
source: src/infer.rs
expression: "infer(r\"{ x = 1, y = True }\")"

---
Input:

{ x = 1, y = True }

---
Output:

{ x : Float, y : Bool }
