src/snapshots/alma__infer__tests__infer_expr-21.snap
---
source: src/infer.rs
expression: "infer(\"{ x = { x = 5 } }\")"

---
Input:

{ x = { x = 5 } }

---
Output:

{ x : { x : Float } }
